--- a/RDIP/codes/2.html
+++ b/RDIP/codes/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>VL</title>
+<title>V1</title>
 <script src="1.js"></script>
 </head>
     <body style="text-align: center;">
