--- a/RDIP/codes/4.html
+++ b/RDIP/codes/4.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>VL</title>
-<script src="3.2.js"></script>
-</head>
+    <head>
+        <title>VL</title>
+        <script src="3.2.js"></script>
+    </head>
     <body style="text-align: center;">
-        <h2>Forming Sentences</h2>
+        <h2>Forming sentences</h2>
         <select id="lang" onchange="language()">
             <option value="none" selected disabled>--Select language--</option>
             <option value="english">English</option>
@@ -13,8 +12,10 @@
         </select>
         <br><br>
         <p id="intro"></p>
-<div id="w_buttons"></div>
- <p id="demo"></p>
+        <div id="w_buttons"></div>
+        <p id="formed"></p>
+        <p id="formedsentence"></p>
         <div id="c_buttons"></div>
-</body>
+        <div id="ending"></div>
+    </body>
 </html>
