--- a/RDIP/codes/7.html
+++ b/RDIP/codes/7.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>VL</title>
+	<meta charset="UTF-8">
         <script src="7.js"></script>
     </head>
     <body style="text-align: center;">
